Feature: add beacon withdrawals (#69)
